	* Upgrade swiftmailer 4.1.2 => 4.1.5
	* Upgrade in PHPThumb with github version for fix bug
	* Fix bug fonction non disponible par défaut chez certain hébergeur (htaccess)
	* Fix bug dans la requête pour retourner les derniers produits
	* Mise à jour de minify suivant les correctifs appliqués
	* upgrade jquery form 2.93 => 2.95
	
2.3.5
	* Upgrade jquery form 2.87 => 2.93
	* Adaptation des plugins tinymce avec jquery form 2.93
	* Adaptation du plugin clearcache avec jimagine et jquery 1.7
	* Fix bug insertion et suppression des éléments dans le plugin contact adaptation avec jimagine)
	* Ajout de la fonction setTimeLocal dans le passage des langues et l'utilisation des dates suivant la langue.
	* Modification de l'entête des scripts
	* Ajout de la surcharge des widgets dans les templates (addWidgetDir)
	* Fix bug paramètres fetch,assign,display (template) avec is_cached
	* Ajout de la surcharge des widgets dans le core de la classe smarty frontend
	* Fix bug position des tags dans les news
	* Fix bug pagination dans les news + autres modules
	* Suppression de correctif.css
	* Ajout de la localization dans jquery validate
	* Modification du formulaire de contact pour le chargement de l'isovalidate
	* Modification de la classe magixglobal dateformat
	* Application des modifications de dateformat dans les fichiers sitemap, rss, news et les widgets de news.
	* Ajout de la classe CSS brush smarty dans le plugin codehighlight (tinyMCE)
	* Fix bug formatage de la date de l'url (liste news)
	* Fix bug pagination dans les actualités (modification du type de tableau)
	* réintégration de la notification pour le dossier install + chmod
	* Fix bug insertion d'un nombre flottant pour le prix.
	* Fix bug jgoogletools (reloadhtml)
	* Modification du lien de la documentation développeur
	
2.3.5RC4
	* Configuration du nouveau template (default v2) + adaptation des widgets avec le framework CSS
	* Intégration de la boite à outils JS (Jimagine) dans l'administration (backend)