@@ -36,7 +36,7 @@
 									<table>
 										<tr>
 											<td style="width:250px;">
-												<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+												<input type="hidden" name="MAX_FILE_SIZE" value="2048576" />
 										 		<input type="file" id="img_c" name="img_c" value="" />
 										 	</td>
 									 	</tr>
