@@ -65,7 +65,7 @@
 										<td class="label"><label for="update_img_c" class="update_img_c">Image :</label></td>
 										<td>
 										
-											<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+											<input type="hidden" name="MAX_FILE_SIZE" value="2048576" />
 										 	<input type="file" id="update_img_c" name="update_img_c" value="" />
 										</td>
 										<td><input type="submit" value="Envoyer" /></td>
