@@ -53,7 +53,7 @@
 									</tr>
 									<tr>
 										<td>
-											<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+											<input type="hidden" name="MAX_FILE_SIZE" value="2048576" />
 									 		<input type="file" id="imgcatalog" name="imgcatalog" value="" />
 									 	</td>
 								 	</tr>
@@ -81,7 +81,7 @@
 									 </td>
 									<tr>
 										<td>
-											<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+											<input type="hidden" name="MAX_FILE_SIZE" value="2048576" />
 									 		<input type="file" id="imggalery" name="imggalery" value="" />
 									 	</td>
 								 	</tr>
