@@ -105,7 +105,7 @@
 										<tr>
 											<td class="label"><label for="n_image">Image :</label></td>
 											<td>
-												<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+												<input type="hidden" name="MAX_FILE_SIZE" value="2048576" />
 										 		<input type="file" id="n_image" name="n_image" value="" />
 										 	</td>
 										 	<td><input type="submit" value="Envoyer" /></td>
