@@ -6,6 +6,9 @@
 	* Fix bug dans la requête pour retourner les derniers produits
 	* Mise à jour de minify suivant les correctifs appliqués
 	* upgrade jquery form 2.93 => 2.95
+	* Amélioration du système de début de l'upload des images
+	* Fix bug sur les notifications d'erreurs de l'upload des images
+	* Modifications de la taille maximum des images via MAX_FILE_SIZE
 	
 2.3.5
 	* Upgrade jquery form 2.87 => 2.93
